Closed Bug 256328 Opened 21 years ago Closed 20 years ago

Page is layed out with horizontal rules through most of page background

Categories

(Core Graveyard :: GFX: Gtk, defect)

x86
Linux
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jmccabe, Assigned: tor)

References

()

Details

(Keywords: fixed1.8, platform-parity)

Attachments

(6 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a3) Gecko/20040819 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8a3) Gecko/20040819 The Bob Cringely column uses a lot of CSS. It seems to break when viewed in Mozilla. Reproducible: Always Steps to Reproduce:
WFM 20040817 PC/Win2000
Minimal testcase needed.
Keywords: pp, qawanted
Attached file A reduced test case. (obsolete) —
This tarball contains an HTML file, a CSS file, and the background image that the CSS file refers to.
Attached image The image
Attachment #156633 - Attachment is obsolete: true
Not an issue on Windows, but I do see this on Linux. The image has white on the left and transparent on the right, and the transparent part paints the line garbage. tor, could you check this out, please? This looks similar to bug 245377...
Assignee: nobody → blizzard
Severity: normal → major
Status: UNCONFIRMED → NEW
Component: Layout → GFX: Gtk
Ever confirmed: true
Keywords: qawanted
QA Contact: core.layout → ian
FWIW, I see this on a fedora core 1 machine (s3 savage) but not on a fedora core 2 box (i845). X server bug with tile/stipple with rop, maybe?
Possible, but may be worth working around if so...
I see this on a Red Hat 9 box, but it's had many packages updated over a long period. It is far from vanilla.
This change after XFree86 4.3 looks somewhat suspicious: 660. Fix a bug in the fbgc.c code that caused the even stipple code path to be used instead of the odd stipple path. Basically causing glitches in rendering or no rendering at all. (Alan Hourihane).
Built a couple servers with and without the fbgc fixes, and that did appear to be the problem. This patch restores the old tiling code that was deleted in bug 244506 and uses it on XFree86 <= 4.3.
Assignee: blizzard → tor
Status: NEW → ASSIGNED
Attachment #158996 - Flags: superreview?(roc)
Attachment #158996 - Flags: review?(blizzard)
Attachment #158996 - Flags: superreview?(roc) → superreview+
Flags: blocking1.8a4?
Comment on attachment 158996 [details] [diff] [review] use old tiling method for buggy X servers Nice catch.
Attachment #158996 - Flags: review?(blizzard) → review+
Attachment #158996 - Flags: approval1.8a4?
Comment on attachment 158996 [details] [diff] [review] use old tiling method for buggy X servers a=asa for checkin to 1.8a4
Attachment #158996 - Flags: approval1.8a4? → approval1.8a4+
Checked in on trunk.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Flags: blocking1.8a4?
The patch does not completely fix the problem here: The commit mentioned in comment #12 was added to the XFree CVS on 2003-12-09, well after the release of XFree86 4.3.0.1 on 2003-03-09. Later 4.3.0.x releases might be affected as well since the commit message on XFree's cvs-commit list indicates that this was fixed on the trunk only, see: http://www.mail-archive.com/cvs-commit@xfree86.org/msg02882.html This means that current Mozilla builds will use the broken code path at least on XFree86 4.3.0.1 (and probably all 4.3.0.x releases). I can confirm the bad rendering with XFree 4.3.0.1 and a Firefox 1.5 branch build about a week old, so I'm reopening this bug now. > + if (strstr(ServerVendor(dpy), "XFree86") && VendorRelease(dpy) <= 40300000) > + sNeedSlowTile = PR_TRUE; To be on the safe side, I guess it would be better to check: if (strstr(ServerVendor(dpy), "XFree86") && VendorRelease(dpy) < 40400000)
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
*** Bug 295127 has been marked as a duplicate of this bug. ***
*** Bug 307782 has been marked as a duplicate of this bug. ***
proposed patch
Elmar, you want to request review on patches if you expect them to get noticed... :(
Attachment #195849 - Flags: superreview?(roc)
Attachment #195849 - Flags: review?(tor)
Attachment #195849 - Flags: review?(tor) → review+
Yeah, I should have seen that I had forgotten something. Thanks for noticing this.
Comment on attachment 195849 [details] [diff] [review] use old tiling method also for 4.3.0.x conservative fix, probably worth having on branch
Attachment #195849 - Flags: superreview?(roc)
Attachment #195849 - Flags: superreview+
Attachment #195849 - Flags: approval1.8b5?
Checked that patch in on the trunk. Elmar Ludwig, thanks for the patch!
Status: REOPENED → RESOLVED
Closed: 21 years ago20 years ago
Resolution: --- → FIXED
Attachment #195849 - Flags: approval1.8b5? → approval1.8b5+
Fixed on 1.8 branch.
Keywords: fixed1.8
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: