Bug 256328 - tiling artifacts on some X servers.  r=blizzard, sr=roc, a=asa